2006-11-08	kaffeetisch

	Merge from HEAD:

	* t/GtkEntry.t, xs/GtkEntry.xs: Allow passing undef to
	set_completion.

2006-10-03	kaffeetisch

	* pm/SimpleList.pm: Don't use =cut ... =cut comment blocks.
	They're invalid POD.

	* xs/GtkSelection.xs, xs/PangoTypes.xs: Don't clobber the Gtk2 and
	Gtk2::Pango man pages with POD.

2006-09-13	kaffeetisch

	* Makefile.PL (find_extra_libs): Also look for Cairo.lib to make
	linking work on win32.

2006-09-10	kaffeetisch

	* t/02.GtkContainer.t, t/GtkBin.t: Remove the noinit flag, since
	these tests apparently need an initialized gtk+ now.

	* t/GdkDnd.t: Turn the get_selection() TODO block into a SKIP
	block that gets skipped on Darwin.

	* t/GtkFileChooser.t: Update; mainly remove a few TODO blocks that
	aren't needed anymore.  Still skip by default though.

	* t/GtkSocket-GtkPlug.t: Skip the whole test if there's no blib
	directory.

2006-09-04	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Stable release 1.140.

2006-08-29	kaffeetisch

	* README: Add a bug reports section.

2006-08-27	kaffeetisch

	* t/GtkRc.t, xs/GtkRc.xs: Allow passing undef to
	Gtk2::RcStyle::name, bg_pixmap_name, and font_desc.  (#352707)

2006-08-26	kaffeetisch

	* Makefile.PL: Add Cairo to the pre-requisite hash if appropriate
	so that EU::MM generates a correct META.yml.

2006-08-20	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.133.

2006-08-20	kaffeetisch

	* Makefile.PL, README: Require Cairo 0.92 (still only if gtk+ >=
	2.8).

	* Gtk2.pm, README: Capitalize "perl" where it refers to the
	language.

2006-08-07	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.132.

2006-08-07	kaffeetisch

	* gtk2perl.h, t/GdkCairo.t, t/GdkDisplay.t, t/GdkPixmap.t,
	t/GdkScreen.t, t/GdkWindow.t, t/GtkAction.t, t/GtkAssistant.t,
	t/GtkButton.t, t/GtkCellRendererAccel.t, t/GtkCellRendererSpin.t,
	t/GtkClipboard.t, t/GtkComboBox.t, t/GtkDnd.t, t/GtkEntry.t,
	t/GtkFileChooserButton.t, t/GtkLabel.t, t/GtkLinkButton.t,